# 3-Finger-Gripper-Manipulation

./: README.md
install/: local_setup.sh  setup.sh
install/gripper/lib/gripper/: gripper_action_client  gripper_action_server  gripper_position_publisher  tcp_rec_publisher
install/gripper/share/gripper/: package.sh
install/gripper_interfaces/share/gripper_interfaces/: package.ps1  package.sh
install/gripper_interfaces/share/gripper_interfaces/cmake/: export_gripper_interfaces__rosidl_generator_pyExport.cmake
src/gripper/: package.xml  setup.py
src/gripper/gripper/: gripper_action_client.py  gripper_action_server.py  gripper_driver.py  tcp_rec_publisher.py
src/gripper_interfaces/: CMakeLists.txt  package.xml
src/gripper_interfaces/action/: MoveGripper.action
